--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
       </div>
       <div class="row bottom">
           <div class="col-sm-4 col-sm-offset-4">
-              <div class="datetimeCntnr">
+              <div class="datetimeCntnr marginBottom5">
                 <div class="mainClock" id="clockBox"></div>
                 <div class="mainDate" id="dateBox"></div>
               </div>
